[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/escoria-core/_test/test_esc_compiler.gd" type="Script" id=1]

[node name="Testsuite" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 1281.0
margin_bottom = 172.0

[node name="BasicFunctionality" type="CheckButton" parent="VBoxContainer/VBoxContainer"]
margin_right = 1281.0
margin_bottom = 40.0
text = "Basic Functionality"
align = 1

[node name="Conditions" type="CheckButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 1281.0
margin_bottom = 84.0
text = "Check conditions"
align = 1

[node name="EventFlags" type="CheckButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 1281.0
margin_bottom = 128.0
text = "Check event flags"
align = 1

[node name="Dialog" type="CheckButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 1281.0
margin_bottom = 172.0
text = "Check dialogs"
align = 1

[connection signal="pressed" from="VBoxContainer/VBoxContainer/BasicFunctionality" to="." method="_on_BasicFunctionality_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Conditions" to="." method="_on_Conditions_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/EventFlags" to="." method="_on_EventFlags_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Dialog" to="." method="_on_Dialog_pressed"]
